# Http

./: .gitignore  CMakeLists.txt  COPYING  HttpLibrary.sln
.github/workflows/: cleanup.yml  msbuild.yml
HttpLibrary/: HttpLibrary.vcxproj  HttpLibrary.vcxproj.filters
HttpLibrary/HttpLibrary/Debug/: vc143.idb
HttpLibrary/HttpLibrary/Debug/HttpLibrary.tlog/: HttpLibrary.lastbuildstate
HttpLibrary/src/: Http.cpp
Scripts/: Package.ps1
include/Http/: Http.h
src/: Http.cpp
